c2rust-transpile/tests/snapshots/snapshots__transpile@exprs.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/exprs.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
#![feature(label_break_value, raw_ref_op)]
extern "C" {
    fn puts(str: *const ::core::ffi::c_char) -> ::core::ffi::c_int;
}
pub type E = ::core::ffi::c_uint;
pub const EA: E = 0;
pub type C2Rust_Unnamed = ::core::ffi::c_uint;
pub const C: C2Rust_Unnamed = 2;
pub const B: C2Rust_Unnamed = 1;
pub const A: C2Rust_Unnamed = 0;
unsafe extern "C" fn side_effect() -> ::core::ffi::c_int {
    unsafe {
        puts(b"the return of side effect\0".as_ptr() as *const ::core::ffi::c_char);
        return 10 as ::core::ffi::c_int;
    }
}
#[no_mangle]
pub unsafe extern "C" fn unary_without_side_effect() {
    unsafe {
        let mut i: ::core::ffi::c_int = 5 as ::core::ffi::c_int;
        -i;
        i;
        !i;
        (i == 0) as ::core::ffi::c_int;
        &raw mut i;
        i;
        i += 1;
        i -= 1;
        i -= 1;
        i += 1;
    }
}
#[no_mangle]
pub unsafe extern "C" fn unary_with_side_effect() {
    unsafe {
        let mut arr: [*mut ::core::ffi::c_char; 1] =
            [::core::ptr::null_mut::<::core::ffi::c_char>()];
        -side_effect();
        side_effect();
        !side_effect();
        (side_effect() == 0) as ::core::ffi::c_int;
        (b"\0".as_ptr() as *const ::core::ffi::c_char).offset(side_effect() as isize)
            as *const ::core::ffi::c_char;
        *arr[side_effect() as usize];
        arr[side_effect() as usize] = arr[side_effect() as usize].offset(1);
        arr[side_effect() as usize] = arr[side_effect() as usize].offset(-1);
        arr[side_effect() as usize] = arr[side_effect() as usize].offset(1);
        arr[side_effect() as usize] = arr[side_effect() as usize].offset(-1);
    }
}
#[no_mangle]
pub unsafe extern "C" fn unsigned_compound_desugaring() {
    unsafe {
        let mut i: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
        let mut u: ::core::ffi::c_uint = 0 as ::core::ffi::c_uint;
        let mut e: E = EA;
        e = (e as ::core::ffi::c_uint).wrapping_add(u) as E as E;
        i = (i as ::core::ffi::c_uint).wrapping_add(u) as ::core::ffi::c_int as ::core::ffi::c_int;
    }
}
#[no_mangle]
pub unsafe extern "C" fn compound_literal() {
    unsafe {
        let mut i: ::core::ffi::c_int = B as ::core::ffi::c_int;
    }
}
#[no_mangle]
pub unsafe extern "C" fn statement_expr() {
    unsafe {
        '_c2rust_label: {
            puts(b"should execute\0".as_ptr() as *const ::core::ffi::c_char);
            return;
        };
        puts(b"should be unreachable!\0".as_ptr() as *const ::core::ffi::c_char);
    }
}
